[package]
name = "deevee"
description = "Designated verifier signatures"
repository = "https://github.com/cronokirby/deevee"
license = "MIT"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "3.2.1"
rand_core = "0.5"
sha2 = "0.10.2"
